--- a/nodejs/public/kakao_login.html
+++ b/nodejs/public/kakao_login.html
@@ -21,7 +21,7 @@
         // 환경에 따라 baseUrl 설정
         const baseUrl = window.location.hostname === 'localhost'
             ? 'http://localhost:3000'
-            : 'https://9e5b-58-76-26-176.ngrok-free.app';  // 실제 ngrok 주소 입력
+            : 'https://1c4c-106-101-10-23.ngrok-free.app';  // 실제 ngrok 주소 입력
 
         // 로그인 성공 후 처리 함수
         function handleLoginSuccess(authObj) {
@@ -45,11 +45,16 @@
             .then(data => {
                 console.log('서버로부터 받은 데이터:', data);
                 
-                // JWT 토큰과 리프레시 토큰을 로컬 스토리지에 저장
-                if (data.accessToken && data.refreshToken) {
+                // JWT 액세스 토큰을 로컬 스토리지에 저장
+                if (data.accessToken) {
                     localStorage.setItem('token', data.accessToken);  // 액세스 토큰 저장
-                    localStorage.setItem('refreshToken', data.refreshToken);  // 리프레시 토큰 저장
-                    window.location.href = data.redirecturl;  // 리다이렉트 URL로 이동
+                    
+                    // 프로필 설정 여부에 따라 다른 페이지로 리다이렉트
+                    if (data.isProfileComplete) {
+                        window.location.href = '/community.html';  // 프로필이 완성되었으면 커뮤니티로
+                    } else {
+                        window.location.href = '/profile_setup.html';  // 프로필 설정이 필요하면 프로필 설정 페이지로 이동
+                    }
                 } else {
                     console.error('토큰을 받지 못했습니다:', data);
                     alert('로그인에 실패했습니다.');
